--- a/자바스크립트/즉시 실행 함수.md
+++ b/자바스크립트/즉시 실행 함수.md
@@ -1,2 +1,17 @@
-# 즉시 실행 함수
-<hr>
+# IIFE (즉시 실행 함수)
+
+IIFE는 직역하면 "즉시" "실행" 함수임
+즉 2가지 조건을 지님
+
+- 즉시 실행
+- 형태는 함수 표현식만 허용 (함수 선언문은 안됌)
+
+결국 함수 표현식을 즉시 실행하는 것을 의미하며 익명 함수와 기명 함수 모두 가능
+
+```
+(function(){
+    console.log("IIFE");
+})();
+
+익명 함수를 괄호로 감싸고 있는 형태
+실행하면 바로 IIFE가 출력됨
