즉시 실행 함수

--- a/자바스크립트/즉시 실행 함수.md
+++ b/자바스크립트/즉시 실행 함수.md
@@ -9,10 +9,18 @@ IIFE는 직역하면 "즉시" "실행" 함수임
 결국 함수 표현식을 즉시 실행하는 것을 의미하며 익명 함수와 기명 함수 모두 가능
 
 ```
+// 이건 익명 함수
 (function(){
     console.log("IIFE");
 })();
 ```
 
-익명 함수를 괄호로 감싸고 있는 형태
+```
+// 이건 기명 함수 (외부에선 접근 불가능)
+(function hello() {
+    console.log("IIFE");
+})();
+```
+
+익명 함수나 기명함수를 괄호로 감싸고 있는 형태
 실행하면 바로 IIFE가 출력됨
