--- a/자바스크립트/즉시 실행 함수.md
+++ b/자바스크립트/즉시 실행 함수.md
@@ -1,5 +1,10 @@
 # IIFE (즉시 실행 함수)
 
+### 1️⃣ 즉시 실행 함수란?
+<hr>
+
+IIFE, Immediately Invoked Function Expression 다시 말해 정의되자마자 바로 실행되는 함수!
+
 IIFE는 직역하면 "즉시" "실행" 함수임
 즉 2가지 조건을 지님
 
@@ -16,7 +21,8 @@ IIFE는 직역하면 "즉시" "실행" 함수임
 ```
 
 ```
-// 이건 기명 함수 (외부에선 접근 불가능)
+// 이건 기명 함수 (선언과 동시에 호출되어 반환되므로 재사용이 불가하기에 이름이 소용 없음..)
+// 하지만 즉시 실행 함수에 이름을 붙이고 안붙이고는 개발자들 사이에서 의견이 갈림
 (function hello() {
     console.log("IIFE");
 })();
@@ -24,3 +30,18 @@ IIFE는 직역하면 "즉시" "실행" 함수임
 
 익명 함수나 기명함수를 괄호로 감싸고 있는 형태
 실행하면 바로 IIFE가 출력됨
+
+### 2️⃣ 사용하는 이유?
+<hr>
+
+1. 필요없는 전역 변수의 생성을 줄일 수 있다.
+함수를 생성하면 그 함수는 전역 변수로써 남아 있게 되고 많은 변수의 생성은 전역 스코프를 오염시킴
+즉시 실행 함수를 사용하면 내부 변수가 전역으로 저장되지 않으므로 전역 스코프의 오염을 줄일 수 있다.
+
+2. private한 변수를 만들 수 있다?
+IIFE는 외부에서 접근할 수 없는 자체적인 스코프를 가지게 된다. 이는 클로저의 사용 목적과도 비슷하며 내부 변수를 
+외부 변수로 부터 안전하게 보호할 수 있다.
+
+### 3️⃣ 활용 방법?
+<hr>
+
