--- a/자바스크립트/바벨.md
+++ b/자바스크립트/바벨.md
@@ -1,5 +1,6 @@
 # 바벨
 
-바벨은 최신 자바스크립트 코드를 구형 브라우저에서도 실행할 수 있도록 변환해주는 자바스크립트 트랜스파일러임
-ES6 이상의 문법을 ES5 이하로 변환하여 호환성을 높이는 역할을 수행함
+### 1️⃣ 바벨이란?
 
+바벨은 최신 자바스크립트 코드를 구형 브라우저에서도 실행할 수 있도록 변환해주는 자바스크립트 트랜스파일러임 <br>
+ES6 이상의 문법을 ES5 이하로 변환하여 호환성을 높이는 역할을 수행함
