--- a/자바스크립트/클래스.md
+++ b/자바스크립트/클래스.md
@@ -18,7 +18,6 @@ class Person {
         this.name = name;
         this.age = age;
     }
-
     introduce() {
         console.log(`안녕하세요, 저는 ${this.name}이고, ${this.age}살입니다.`);
     }
@@ -32,3 +31,21 @@ person1.introduce();
 
 ### 3️⃣ 클래스 주요 개념
 <hr>
+
+1. 생성자 (constructor)
+- constructor는 클래스의 객체가 생성될 때 자동으로 호출되는 메서드임
+- 객체의 초기 상태를 설정하는 역할
+```
+class Car {
+    constructor(brand, model) {
+        this.brand = brand;
+        this.model = model;
+    }
+}
+
+const myCar = new Car('Tesla', 'Model S');
+console.log(myCar.brand); // Tesla
+```
+
+2. 메서드 (method)
+- 
