--- a/자바스크립트/클래스.md
+++ b/자바스크립트/클래스.md
@@ -48,4 +48,58 @@ console.log(myCar.brand); // Tesla
 ```
 
 2. 메서드 (method)
-- 
+- 클래스 내부에서 정의된 함수로 해당 클래스의 객체 수행할 동작을 정의함
+```
+class Dog {
+    constructor(name) {
+        this.name = name;
+    }
+    
+    bark() {
+        console.log(`${this.name}가 멍멍 짖습니다!`);
+    }
+}
+
+const myDog = new Dog('바둑이');
+myDog.bark();
+```
+
+3. 상속 (Inheritance)
+- extends 키워드를 사용하여 기존 클래스 확장 가능
+```
+class Animal {
+    constructor(name) {
+        this.name = name;
+    }
+    
+    makeSound() {
+        console.log('소리를 냅니다.');
+    }
+}
+
+class Cat extends Animal {
+    makeSound() {
+        console.log(`${this.name}가 야옹 합니다!`);
+    }
+}
+
+const myCat = new Cat('나비');
+myCat.makeSound(); // 나비가 야옹 합니다! 출력
+```
+
+4. 정적 메서드 (static method)
+- static 키워드를 사용하면 클래스의 인스턴스 없이 호출할 수 있는 메서드를 정의 가능
+```
+class Mathhelper {
+    static add(a, b) {
+        return a + b;
+    }
+}
+
+console.log(MathHelper.add(5, 10)); // 15
+```
+
+### 4️⃣ 클래스의 장점
+- 객체 지향적인 코드 작성 가능
+- 코드의 재사용성 및 유지보수성 상승
+- 상속을 통해 코드 구조 쉽게 확장
