--- a/자바스크립트/클래스.md
+++ b/자바스크립트/클래스.md
@@ -101,6 +101,6 @@ console.log(MathHelper.add(5, 10)); // 15
 
 ### 4️⃣ 클래스의 장점
 <hr>
-- 객체 지향적인 코드 작성 가능
-- 코드의 재사용성 및 유지보수성 상승
-- 상속을 통해 코드 구조 쉽게 확장
+- 객체 지향적인 코드 작성 가능 <br>
+- 코드의 재사용성 및 유지보수성 상승 <br>
+- 상속을 통해 코드 구조 쉽게 확장 <br>
