--- a/자바스크립트/바벨.md
+++ b/자바스크립트/바벨.md
@@ -1,6 +1,24 @@
 # 바벨
 
 ### 1️⃣ 바벨이란?
+<hr>
 
-바벨은 최신 자바스크립트 코드를 구형 브라우저에서도 실행할 수 있도록 변환해주는 자바스크립트 트랜스파일러임 <br>
-ES6 이상의 문법을 ES5 이하로 변환하여 호환성을 높이는 역할을 수행함
+바벨은 최신 자바스크립트 코드를 구 버전의 브라우저나 환경에서도 실행할 수 있도록 변환하는 자바스크립트 컴파일러임
+주로 ES6 문법을 ES5로 변환하는데 사용하며 JSX 및 타입스크립트 코드도 변환 가능
+
+### 2️⃣ 주요 기능
+<hr>
+
+1. 최신 문법 변환
+ES6+ 이상 문법을 ES5로 변환하여 호환성 제공
+화살표 함수 / 클래스 / 템플릿 리터럴 등의 변환 지원
+
+2. JSX의 변환
+리액트의 JSX 문법을 일반적인 자바스크립트 코드로 변환
+
+3. 타입스크립트 변환
+타입스크립트를 자바스크립트로 변환하여 브라우저에서 실행 가능하도록 함
+
+정리하자면 ~
+바벨은 최신 자바스크립트 기능을 지원하지 않는 환경에서도 코드를 실행할 수 있도록 도와주는 강력한 도구임
+웹팩과 함께라면 더욱 효과적인 모던 웹 개발 가능
