--- a/자바스크립트/바벨.md
+++ b/자바스크립트/바벨.md
@@ -10,7 +10,7 @@
 <hr>
 
 1. 최신 문법 변환
-ES6+ 이상 문법을 ES5로 변환하여 호환성 제공
+ES6+ 이상 문법을 ES5로 변환하여 호환성 제공 <br>
 화살표 함수 / 클래스 / 템플릿 리터럴 등의 변환 지원
 
 2. JSX의 변환
@@ -20,5 +20,5 @@ ES6+ 이상 문법을 ES5로 변환하여 호환성 제공
 타입스크립트를 자바스크립트로 변환하여 브라우저에서 실행 가능하도록 함
 
 정리하자면 ~
-바벨은 최신 자바스크립트 기능을 지원하지 않는 환경에서도 코드를 실행할 수 있도록 도와주는 강력한 도구임
+바벨은 최신 자바스크립트 기능을 지원하지 않는 환경에서도 코드를 실행할 수 있도록 도와주는 강력한 도구임 <br>
 웹팩과 함께라면 더욱 효과적인 모던 웹 개발 가능
