--- a/자바스크립트/바벨.md
+++ b/자바스크립트/바벨.md
@@ -19,6 +19,6 @@ ES6+ 이상 문법을 ES5로 변환하여 호환성 제공 <br>
 3. 타입스크립트 변환
 타입스크립트를 자바스크립트로 변환하여 브라우저에서 실행 가능하도록 함
 
-정리하자면 ~
+정리하자면 ~ <br>
 바벨은 최신 자바스크립트 기능을 지원하지 않는 환경에서도 코드를 실행할 수 있도록 도와주는 강력한 도구임 <br>
 웹팩과 함께라면 더욱 효과적인 모던 웹 개발 가능
