--- a/자바스크립트/클래스.md
+++ b/자바스크립트/클래스.md
@@ -103,4 +103,4 @@ console.log(MathHelper.add(5, 10)); // 15
 <hr>
 - 객체 지향적인 코드 작성 가능 <br>
 - 코드의 재사용성 및 유지보수성 상승 <br>
-- 상속을 통해 코드 구조 쉽게 확장 <br>ㄷ
+- 상속을 통해 코드 구조 쉽게 확장 <br>
