--- a/자바스크립트/동적 타이핑.md
+++ b/자바스크립트/동적 타이핑.md
@@ -1,9 +1,10 @@
 # 동적 타이핑
 
-### 1️⃣ 들어가며
+### 1️⃣ 동적 타이핑이란?
 <hr>
 
-자바스크립트는 동적 타이핑을 지원하는 언어로써 변수의 자료형을 명시적으로 선언하지 않아도 자동으로 할당함 <br>
+변수의 자료형을 명시적으로 선언하지 않아도 자동으로 할당하는 것을 의미함 <br>
+자바스크립트는 동적 타이핑을 지원한다는 말이랑 같은 말임 <br>
 즉 변수를 선언할 때 자료형을 지정할 필요가 없으며 실행 중이 자료형이 변경될 수도 있음 <br>
 
 ```javascript
