--- a/자바스크립트/동적 타이핑.md
+++ b/자바스크립트/동적 타이핑.md
@@ -8,9 +8,9 @@
 즉 변수를 선언할 때 자료형을 지정할 필요가 없으며 실행 중이 자료형이 변경될 수도 있음 <br>
 
 ```javascript
-let value = 10;    // number
-value = "Hello";  // string (자료형 변경 가능)
-value = true;      // boolean
+let value = 10;
+value = "Hello";
+value = true;
 ```
 
 위 코드에서 `value` 변수는 처음에는 숫자형 값을 가지지만 이후 문자열과 불리언 값으로 변경됨
