--- a/백엔드/서버리스.md
+++ b/백엔드/서버리스.md
@@ -1,4 +1,4 @@
-# 서버리스(serverless)란 무엇인가?
+## 서버리스(serverless)란 무엇인가?
 
 서버리스는 서버(server) + 리스(less)의 합성어라 문자 그대로 '서버가 없다'고 오해할 수 있지만 실제로 서버가 없는 것은 아니다.
 서버리스는 클라우드 컴퓨팅 모델 중 하나로 개발자가 서버를 직접 관리할 필요 없이 클라우드에서 자동으로 서버를 관리해주는 아키텍처를 의미한다.
@@ -11,6 +11,8 @@
 
 또한 서버 관리는 클라우드 제공 기업이 전적으로 관리하므로 개발자는 스케일링, 업데이트, 백업, 보안 등 서버 관리에 신경 쓸 필요 없이 비즈니스 로직 개발에 집중할 수 있다.
 
+---
+
 ## 서버리스 아키텍처의 구현 방식
 
 서버리스 아키텍처의 대표적인 구현 방식은 다음 두 가지로 나뉜다.
@@ -22,3 +24,47 @@
     - Firebase, Kinvey, Parse 등
 
 일반적으로 서버리스라 하면 FaaS를 가르키는 경우가 많다.
+
+---
+
+### Faas : Function as a Service
+
+- Function, 즉 함수를 서비스로 제공하는 방식
+- 사용자가 작성한 코드를 클라우드에 업로드하면 해당 서버는 코드를 함수 단위로 관리하여 대기 상태로 둔다.
+- 요청이 들어오면 서버가 함수를 실행하여 요청을 처리하고 작업이 끝나면 다시 대기 상태로 전환한다.
+- 비용은 함수 호출 횟수에 따라 청구된다.
+
+> 쉽게 말해 업로드한 코드는 평소에 자고 있다가 요청이 들어오면 서버가 깨워서 처리한 뒤 다시 재운다.
+
+### FaaS의 특징
+
+1. **Stateless**
+    - 함수가 실행되는 동안에만 자원을 할당하며 항상 같은 머신에서 실행된다는 보장이 없다.
+    - 함수 실행 시 로컬에서 상태를 유지할 수 없다.
+    - 상태가 필요하다면 메모리가 아닌 외부 저장소(S3, DB 등)을 사용해야 한다.
+
+2. **Ephemeral**
+    - 함수는 특정 이벤트가 발생할 때만 컨테이너로 배포되고 실행이 끝나면 실행이 끝나면 자원이 회수된다.
+    - 즉 일시적으로만 배포되는 구조이다.
+
+---
+
+## 서버리스의 장단점
+
+### 장점
+
+- 기존 IaaS나 PaaS와 달리 실제 사용량에 대해서만 비용이 청구되어 경제적
+- 서버 관리 부담이 없어 개발 생산성 및 개발 시간 단축
+- 자동 스케일 업/다운 지원
+- 간편한 배포
+
+### 단점
+
+- **Cold Start**
+    - 서버가 항상 요청을 대기하지 않으므로 첫 요청 시 느릴 수 있음
+    - 규모가 작은 프로젝트에서는 영향이 적지만 대형/고속 프로젝트에는 부적합
+
+- **실행 시간 한계**
+    - 서버리스는 짧고 단순한 작업에 적합
+    - 긴 작업(동영상 업로드, 대용량 데이터 백업 등)에는 비효율적
+    - 함수 호출당 메모리/시간 제한 있음
